force-app/main/default/objects/animalos__Job_Activity__c/animalos__Job_Activity__c.object-meta.xml
<CustomObject>
    <label>Job Activity</label>
    <nameField>
        <displayFormat>JA{000000}</displayFormat>
        <label>Job Activity ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>