force-app/main/default/objects/animalos__Job_Activity__c/fields/animalos__Activity_Note__c.field-meta.xml
<CustomField>
    <fullName>animalos__Activity_Note__c</fullName>
    <label>Activity Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>