force-app/main/default/objects/animalos__Job_Activity__c/fields/animalos__Actual_Duration_minutes__c.field-meta.xml
<CustomField>
    <fullName>animalos__Actual_Duration_minutes__c</fullName>
    <formula>(animalos__End_Date_Time__c - animalos__Start_Date_Time__c) * 1440</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Duration (minutes)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>