force-app/main/default/objects/animalos__Job_Activity__c/fields/animalos__Address__c.field-meta.xml
<CustomField>
    <fullName>animalos__Address__c</fullName>
    <label>Address</label>
    <type>Address</type>
</CustomField>