force-app/main/default/objects/animalos__Job_Activity__c/fields/animalos__Awaiting_Response__c.field-meta.xml
<CustomField>
    <fullName>animalos__Awaiting_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Awaiting Response</label>
    <type>Checkbox</type>
</CustomField>