force-app/main/default/objects/animalos__Job_Activity__c/fields/animalos__Direction__c.field-meta.xml
<CustomField>
    <fullName>animalos__Direction__c</fullName>
    <label>Direction</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>