force-app/main/default/objects/animalos__Job_Activity__c/fields/animalos__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>animalos__Due_Date__c</fullName>
    <label>Due Date</label>
    <type>DateTime</type>
</CustomField>