force-app/main/default/objects/animalos__Job_Activity__c/fields/animalos__Information_Requested__c.field-meta.xml
<CustomField>
    <fullName>animalos__Information_Requested__c</fullName>
    <label>Information Requested</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>