force-app/main/default/objects/animalos__Job_Activity__c/fields/animalos__Job__c.field-meta.xml
<CustomField>
    <fullName>animalos__Job__c</fullName>
    <label>Job</label>
    <referenceTo>animalos__Job__c</referenceTo>
    <relationshipLabel>Job Activities</relationshipLabel>
    <relationshipName>Job_Activities2</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>