force-app/main/default/objects/animalos__Job_Activity__c/fields/animalos__Job_Activity_Formula__c.field-meta.xml
<CustomField>
    <fullName>animalos__Job_Activity_Formula__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp;Id,  Name, &apos;_self&apos;)</formula>
    <label>Job Activity Formula</label>
    <type>Text</type>
</CustomField>