force-app/main/default/objects/animalos__Job_Activity__c/fields/animalos__Job_Classification__c.field-meta.xml
<CustomField>
    <fullName>animalos__Job_Classification__c</fullName>
    <label>Job Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Routine</fullName>
            </value>
            <value>
                <fullName>Moderate Concern</fullName>
            </value>
            <value>
                <fullName>High Vigilance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>