force-app/main/default/objects/animalos__Job_Activity__c/fields/animalos__Legal_Action_Penalty_Created__c.field-meta.xml
<CustomField>
    <fullName>animalos__Legal_Action_Penalty_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legal Action Penalty Created</label>
    <type>Checkbox</type>
</CustomField>