force-app/main/default/objects/animalos__Job_Activity__c/fields/animalos__Page_Number__c.field-meta.xml
<CustomField>
    <fullName>animalos__Page_Number__c</fullName>
    <label>Page Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>