force-app/main/default/objects/animalos__Job_Activity__c/fields/animalos__Recheck__c.field-meta.xml
<CustomField>
    <fullName>animalos__Recheck__c</fullName>
    <label>Recheck</label>
    <type>Date</type>
</CustomField>