force-app/main/default/objects/animalos__Job_Activity__c/fields/animalos__Safety_Declaration_Date__c.field-meta.xml
<CustomField>
    <fullName>animalos__Safety_Declaration_Date__c</fullName>
    <label>Safety Declaration Date</label>
    <type>Date</type>
</CustomField>