force-app/main/default/objects/animalos__Job_Activity__c/fields/animalos__Services_Provided__c.field-meta.xml
<CustomField>
    <fullName>animalos__Services_Provided__c</fullName>
    <label>Services Provided</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Flea Treatment</fullName>
            </value>
            <value>
                <fullName>Worming Treatment</fullName>
            </value>
            <value>
                <fullName>Bedding or Shelter</fullName>
            </value>
            <value>
                <fullName>Veterinary and/or Desexing Options</fullName>
            </value>
            <value>
                <fullName>Rescue Group Options</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>