force-app/main/default/objects/animalos__Job_Activity__c/fields/animalos__Status__c.field-meta.xml
<CustomField>
    <fullName>animalos__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Attended</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Monitoring Ended</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>New Update</fullName>
            </value>
            <value>
                <fullName>Ongoing Monitoring</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Search Active</fullName>
            </value>
            <value>
                <fullName>Search Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>