force-app/main/default/objects/animalos__Job_Activity__c/fields/animalos__Type_of_Work__c.field-meta.xml
<CustomField>
    <fullName>animalos__Type_of_Work__c</fullName>
    <label>Type of Work</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inspection</fullName>
            </value>
            <value>
                <fullName>Recheck</fullName>
            </value>
            <value>
                <fullName>Call/SMS</fullName>
            </value>
            <value>
                <fullName>Email/Letter</fullName>
            </value>
            <value>
                <fullName>Brief Prep</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Attendance Safety Declaration</fullName>
            </value>
            <value>
                <fullName>Digital Information Request</fullName>
            </value>
            <value>
                <fullName>Digital Information Response</fullName>
            </value>
            <value>
                <fullName>Trap Deployment</fullName>
            </value>
            <value>
                <fullName>Investigation Plan</fullName>
            </value>
            <value>
                <fullName>Attended Property</fullName>
            </value>
            <value>
                <fullName>Sent Advisory Letter</fullName>
            </value>
            <value>
                <fullName>Sent Warning Letter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>