force-app/main/default/objects/animalos__Job_Activity__c/fields/animalos__Written_Directions__c.field-meta.xml
<CustomField>
    <fullName>animalos__Written_Directions__c</fullName>
    <label>Written Directions</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>