force-app/main/default/objects/animalos__Job_Activity__c/fields/aos_Action__c.field-meta.xml
<CustomField>
    <fullName>aos_Action__c</fullName>
    <label>Action</label>
    <length>40000</length>
    <type>LongTextArea</type>
</CustomField>