force-app/main/default/objects/animalos__Job_Activity__c/fields/aos_Activity_Location__c.field-meta.xml
<CustomField>
    <fullName>aos_Activity_Location__c</fullName>
    <label>Activity Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Callers House</fullName>
            </value>
            <value>
                <fullName>Public Space</fullName>
            </value>
            <value>
                <fullName>Callers Workplace</fullName>
            </value>
            <value>
                <fullName>Other (Please specify in job notes)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>