force-app/main/default/objects/animalos__Job_Activity__c/fields/aos_Alleged_Offences__c.field-meta.xml
<CustomField>
    <fullName>aos_Alleged_Offences__c</fullName>
    <label>Alleged Offences</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Section 15 (3) Regulation May Require compliance with code of practice</fullName>
            </value>
            <value>
                <fullName>Section 17(2)- Breach of Cuty of Care Prohibited</fullName>
            </value>
            <value>
                <fullName>Section 18 (1) Animal Cruelty Prohibited</fullName>
            </value>
            <value>
                <fullName>Section 19 (1) Unreasonable abandonment or release</fullName>
            </value>
            <value>
                <fullName>Section 19(2) release animal from person in charge</fullName>
            </value>
            <value>
                <fullName>Section 21 (1) Participation in a probited event</fullName>
            </value>
            <value>
                <fullName>Section 22(2) Presence at prohibited event</fullName>
            </value>
            <value>
                <fullName>Section 23 (1) Regulated Procedures for dogs</fullName>
            </value>
            <value>
                <fullName>Section 24 (1) Docking dogs tail</fullName>
            </value>
            <value>
                <fullName>Section 25 (1)  Debarking Operations</fullName>
            </value>
            <value>
                <fullName>Section 26 (1) Removal of cats claw</fullName>
            </value>
            <value>
                <fullName>Section 27 (docking tail of cattle or horse)</fullName>
            </value>
            <value>
                <fullName>S28 Restriction on supplying a de barked dog</fullName>
            </value>
            <value>
                <fullName>S29 Other Restrictions</fullName>
            </value>
            <value>
                <fullName>S30, 31 and 32 Other Offences relating to dogs</fullName>
            </value>
            <value>
                <fullName>S 33 Transporting Dogs</fullName>
            </value>
            <value>
                <fullName>S34 and 35- Use and Possession of prohibted trap or spur unlawful</fullName>
            </value>
            <value>
                <fullName>S36- A person must not, with the intention of injuring or killing an animals, administer to, or feed the animal a substance the person knows if harmful or poisonous to the animal</fullName>
            </value>
            <value>
                <fullName>S37 Unlawfully allowing an animal to injure or kill another animal</fullName>
            </value>
            <value>
                <fullName>Section 37A- Possession or use of prohibited devices</fullName>
            </value>
            <value>
                <fullName>Section 161- Failure to Comply with an Animal Welfare Direction</fullName>
            </value>
            <value>
                <fullName>Section 187 - Contravention of prohibition order unlawful</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>