force-app/main/default/objects/animalos__Job_Activity__c/fields/aos_Alleged_Offences_Details__c.field-meta.xml
<CustomField>
    <fullName>aos_Alleged_Offences_Details__c</fullName>
    <label>Alleged Offences Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>