force-app/main/default/objects/animalos__Job_Activity__c/fields/aos_Checked_No_Harm_Risk_to_Myself_or__c.field-meta.xml
<CustomField>
    <fullName>aos_Checked_No_Harm_Risk_to_Myself_or__c</fullName>
    <inlineHelpText>Have I checked that I will not harm myself or affect other people nearby?</inlineHelpText>
    <label>Checked No Harm Risk to Myself or Others</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>