force-app/main/default/objects/animalos__Job_Activity__c/fields/aos_Checked_Working_Area_for_Hazards__c.field-meta.xml
<CustomField>
    <fullName>aos_Checked_Working_Area_for_Hazards__c</fullName>
    <inlineHelpText>Have I checked my working area for potential hazards?</inlineHelpText>
    <label>Checked Working Area for Hazards</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>