force-app/main/default/objects/animalos__Job_Activity__c/fields/aos_Control_measures_put_in_place_or__c.field-meta.xml
<CustomField>
    <fullName>aos_Control_measures_put_in_place_or__c</fullName>
    <inlineHelpText>Control measures put in place or required.</inlineHelpText>
    <label>Control Measures In Place</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>