force-app/main/default/objects/animalos__Job_Activity__c/fields/aos_Days_in_Field__c.field-meta.xml
<CustomField>
    <fullName>aos_Days_in_Field__c</fullName>
    <formula>IF(ISBLANK(animalos__End_Date_Time__c), NOW(),animalos__End_Date_Time__c) - animalos__Start_Date_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in Field</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>