force-app/main/default/objects/animalos__Job_Activity__c/fields/aos_Direction_Reason__c.field-meta.xml
<CustomField>
    <fullName>aos_Direction_Reason__c</fullName>
    <label>Direction Reason</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>