force-app/main/default/objects/animalos__Job_Activity__c/fields/aos_Dispute_Details__c.field-meta.xml
<CustomField>
    <fullName>aos_Dispute_Details__c</fullName>
    <label>Dispute Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>