force-app/main/default/objects/animalos__Job_Activity__c/fields/aos_Elements_of_Offence_s__c.field-meta.xml
<CustomField>
    <fullName>aos_Elements_of_Offence_s__c</fullName>
    <label>Elements of Offence/s</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EOO 1</fullName>
            </value>
            <value>
                <fullName>EOO 2</fullName>
            </value>
            <value>
                <fullName>Time, Date, Place</fullName>
            </value>
            <value>
                <fullName>Person</fullName>
            </value>
            <value>
                <fullName>Compulsory Code Requirement</fullName>
            </value>
            <value>
                <fullName>Must Comply</fullName>
            </value>
            <value>
                <fullName>Requirement</fullName>
            </value>
            <value>
                <fullName>In charge</fullName>
            </value>
            <value>
                <fullName>Animal</fullName>
            </value>
            <value>
                <fullName>Must not</fullName>
            </value>
            <value>
                <fullName>Breach</fullName>
            </value>
            <value>
                <fullName>Duty of Care- appropriate</fullName>
            </value>
            <value>
                <fullName>Food and Water</fullName>
            </value>
            <value>
                <fullName>Accommodation of living conditions</fullName>
            </value>
            <value>
                <fullName>Display normal patterns of behaviour</fullName>
            </value>
            <value>
                <fullName>Treatment of disease or injury</fullName>
            </value>
            <value>
                <fullName>Handling/confinement/transport is appropriate</fullName>
            </value>
            <value>
                <fullName>Cruel (describe the act of cruelty)</fullName>
            </value>
            <value>
                <fullName>Abandon or release</fullName>
            </value>
            <value>
                <fullName>Without reasonable excuse/or release is authorised by law</fullName>
            </value>
            <value>
                <fullName>Release</fullName>
            </value>
            <value>
                <fullName>From custody</fullName>
            </value>
            <value>
                <fullName>Of person in charge</fullName>
            </value>
            <value>
                <fullName>Prohibited event</fullName>
            </value>
            <value>
                <fullName>Reasonable excuse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>