force-app/main/default/objects/animalos__Job_Activity__c/fields/aos_Elements_of_Offence_s_Details__c.field-meta.xml
<CustomField>
    <fullName>aos_Elements_of_Offence_s_Details__c</fullName>
    <label>Elements of Offence/s Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>