force-app/main/default/objects/animalos__Job_Activity__c/fields/aos_Entanglement_Type__c.field-meta.xml
<CustomField>
    <fullName>aos_Entanglement_Type__c</fullName>
    <label>Entanglement Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>