force-app/main/default/objects/animalos__Job_Activity__c/fields/aos_Entry_Power__c.field-meta.xml
<CustomField>
    <fullName>aos_Entry_Power__c</fullName>
    <label>Entry Power</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abandonment S122(1)(h)</fullName>
            </value>
            <value>
                <fullName>Animal Just Injured / Untreated</fullName>
            </value>
            <value>
                <fullName>Check Compliance with AWD</fullName>
            </value>
            <value>
                <fullName>Consent</fullName>
            </value>
            <value>
                <fullName>Delay Result in Concealment / Death</fullName>
            </value>
            <value>
                <fullName>Imminent Risk Death / Injury</fullName>
            </value>
            <value>
                <fullName>No Entry Made</fullName>
            </value>
            <value>
                <fullName>Public Place</fullName>
            </value>
            <value>
                <fullName>S122 (2) To Contact Occupier</fullName>
            </value>
            <value>
                <fullName>S123 To Provide Relief</fullName>
            </value>
            <value>
                <fullName>s148(2) for seized animals</fullName>
            </value>
            <value>
                <fullName>Vehicle - Consent</fullName>
            </value>
            <value>
                <fullName>Vehicle - No Consent</fullName>
            </value>
            <value>
                <fullName>Warrant to Enter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>