force-app/main/default/objects/animalos__Job_Activity__c/fields/aos_Equipment_Used__c.field-meta.xml
<CustomField>
    <fullName>aos_Equipment_Used__c</fullName>
    <label>Equipment Used</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>