force-app/main/default/objects/animalos__Job_Activity__c/fields/aos_Hazards_Controlled_in_Risk_Register__c.field-meta.xml
<CustomField>
    <fullName>aos_Hazards_Controlled_in_Risk_Register__c</fullName>
    <inlineHelpText>Have all hazards been controlled in a Risk Assessment or Risk Register?</inlineHelpText>
    <label>Hazards Controlled in Risk Register</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>