force-app/main/default/objects/animalos__Job_Activity__c/fields/aos_Indicative_Timeframe_for_Action__c.field-meta.xml
<CustomField>
    <fullName>aos_Indicative_Timeframe_for_Action__c</fullName>
    <label>Indicative Timeframe for Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Critical - As soon as possible and within 24 hours</fullName>
            </value>
            <value>
                <fullName>Major - Within 72 hours</fullName>
            </value>
            <value>
                <fullName>Secondary - Within 7 days</fullName>
            </value>
            <value>
                <fullName>Minor - When in the area</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>