force-app/main/default/objects/animalos__Job_Activity__c/fields/aos_Injury_Description__c.field-meta.xml
<CustomField>
    <fullName>aos_Injury_Description__c</fullName>
    <label>Injury Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>