force-app/main/default/objects/animalos__Job_Activity__c/fields/aos_Investigation_Aims__c.field-meta.xml
<CustomField>
    <fullName>aos_Investigation_Aims__c</fullName>
    <label>Investigation Aims</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>