force-app/main/default/objects/animalos__Job_Activity__c/fields/aos_Location_Information__c.field-meta.xml
<CustomField>
    <fullName>aos_Location_Information__c</fullName>
    <label>Location Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>