force-app/main/default/objects/animalos__Job_Activity__c/fields/aos_Location_s_Attended__c.field-meta.xml
<CustomField>
    <fullName>aos_Location_s_Attended__c</fullName>
    <label>Location/s Attended</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>