force-app/main/default/objects/animalos__Job_Activity__c/fields/aos_Notice_Number__c.field-meta.xml
<CustomField>
    <fullName>aos_Notice_Number__c</fullName>
    <label>Notice Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>