force-app/main/default/objects/animalos__Job_Activity__c/fields/aos_Other_Hazards_Identified__c.field-meta.xml
<CustomField>
    <fullName>aos_Other_Hazards_Identified__c</fullName>
    <inlineHelpText>Have you identified any Hazard(s) from the Take 5 Assessment (Which are not included in the Risk Register or Task Risk Assessment).</inlineHelpText>
    <label>Other Hazards Identified</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>