force-app/main/default/objects/animalos__Job_Activity__c/fields/aos_Outcome__c.field-meta.xml
<CustomField>
    <fullName>aos_Outcome__c</fullName>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACPA Powers Used</fullName>
            </value>
            <value>
                <fullName>Advice/education provided with attendance</fullName>
            </value>
            <value>
                <fullName>Advice/education provided without attendance</fullName>
            </value>
            <value>
                <fullName>Animal Surrendered</fullName>
            </value>
            <value>
                <fullName>Animals Seized Under ACPA</fullName>
            </value>
            <value>
                <fullName>DOA – Body left in field</fullName>
            </value>
            <value>
                <fullName>DOA – Left in Field</fullName>
            </value>
            <value>
                <fullName>DOA – Return to Shelter</fullName>
            </value>
            <value>
                <fullName>DOA Domestic – Returned to Owner in Field</fullName>
            </value>
            <value>
                <fullName>Euthanasia in Field</fullName>
            </value>
            <value>
                <fullName>Job Share with another Agency</fullName>
            </value>
            <value>
                <fullName>Provided Relief</fullName>
            </value>
            <value>
                <fullName>Record Only (Reasoning Required)</fullName>
            </value>
            <value>
                <fullName>Ref to Other Jurisdiction – No Welfare Issue</fullName>
            </value>
            <value>
                <fullName>Ref to Other Jurisdiction – Welfare Issue</fullName>
            </value>
            <value>
                <fullName>Referred to External Wildlife Carer/ Rescuer</fullName>
            </value>
            <value>
                <fullName>Referred to RSPCA Wildlife Responder</fullName>
            </value>
            <value>
                <fullName>Rescue Cancelled</fullName>
            </value>
            <value>
                <fullName>Rescue No Longer Required</fullName>
            </value>
            <value>
                <fullName>Rescued and Released</fullName>
            </value>
            <value>
                <fullName>Rescued and Returned to Owner – Domestic</fullName>
            </value>
            <value>
                <fullName>Rescued and Returned to Shelter</fullName>
            </value>
            <value>
                <fullName>Rescued and Taken to Contract Vet</fullName>
            </value>
            <value>
                <fullName>Rescued and Taken to External Vet</fullName>
            </value>
            <value>
                <fullName>Rescued and Taken to Wildlife Carer</fullName>
            </value>
            <value>
                <fullName>Rescued and Transported to External Care Facility</fullName>
            </value>
            <value>
                <fullName>Transport Complete</fullName>
            </value>
            <value>
                <fullName>Unable to Capture Animal</fullName>
            </value>
            <value>
                <fullName>Unable to Locate Animal</fullName>
            </value>
            <value>
                <fullName>Vexatious Report</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>