force-app/main/default/objects/animalos__Job_Activity__c/fields/aos_Prestart_Checks_Completed__c.field-meta.xml
<CustomField>
    <fullName>aos_Prestart_Checks_Completed__c</fullName>
    <inlineHelpText>Have I visually checked tooling / equipment and carried out required prestarts inspections for the task?</inlineHelpText>
    <label>Prestart Checks Completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>